[package]
name = "test"
version = "0.1.0"
authors = ["Axetroy <axetroy.dev@gmail.com>"]
readme = "README.md"
keywords = ["cask", "distributed", "binary", "package", "manager"]
repository = "https://github.com/axetroy/cask.rs"
description = """
"""

edition = "2021"

[[bin]]
name = "test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.7"
chrono = "0.4.19"
tar = "0.4.38"
libflate = "1.1.2"